--- a/dotnet/ApplicationTracker.Web/Views/Shared/_Layout.cshtml
+++ b/dotnet/ApplicationTracker.Web/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">ApplicationTracker.Web</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">App Tracker</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -25,6 +25,15 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                        </li>
+
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle text-light" href="#" id="navbarAdminMenu" role="button" data-bs-toggle="dropdown" aria-expanded="false">Admin</a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarAdminMenu">
+                                <li><a class="dropdown-item" asp-area="admin" asp-controller="Applications" asp-action="Index">Applications</a></li>
+                                <li><a class="dropdown-item" asp-area="admin" asp-controller="Contacts" asp-action="Index">Contacts</a></li>
+                                <li><a class="dropdown-item" asp-area="admin" asp-controller="Companies" asp-action="Index">Companies</a></li>
+                            </ul>
                         </li>
                     </ul>
                 </div>
