--- a/dotnet/ApplicationTracker.Web/Areas/Admin/Views/Applications/Edit.cshtml
+++ b/dotnet/ApplicationTracker.Web/Areas/Admin/Views/Applications/Edit.cshtml
@@ -35,8 +35,8 @@
             </div>
             <div class="form-group">
                 <label asp-for="Type" class="control-label"></label>
-                <select asp-for="Type" class="form-control"></select>
-                <span asp-validation-for="Type" class="text-danger"></span>
+                @* <select asp-for="Type" class="form-control"></select>
+                <span asp-validation-for="Type" class="text-danger"></span> *@
             </div>
             <div class="form-group">
                 <label asp-for="Location" class="control-label"></label>
@@ -60,8 +60,8 @@
             </div>
             <div class="form-group">
                 <label asp-for="Status" class="control-label"></label>
-                <select asp-for="Status" class="form-control"></select>
-                <span asp-validation-for="Status" class="text-danger"></span>
+                @* <select asp-for="Status" class="form-control"></select>
+                <span asp-validation-for="Status" class="text-danger"></span> *@
             </div>
             <div class="form-group">
                 <label asp-for="ApplicationStatusReason" class="control-label"></label>
@@ -75,13 +75,13 @@
             </div>
             <div class="form-group">
                 <label asp-for="FollowUps" class="control-label"></label>
-                <input asp-for="FollowUps" class="form-control" />
-                <span asp-validation-for="FollowUps" class="text-danger"></span>
+                @* <input asp-for="FollowUps" class="form-control" />
+                <span asp-validation-for="FollowUps" class="text-danger"></span> *@
             </div>
             <div class="form-group">
                 <label asp-for="Notes" class="control-label"></label>
-                <input asp-for="Notes" class="form-control" />
-                <span asp-validation-for="Notes" class="text-danger"></span>
+                @* <input asp-for="Notes" class="form-control" />
+                <span asp-validation-for="Notes" class="text-danger"></span> *@
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
